prow/config/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: prow
  name: prow
  annotations:
    # Change this to your issuer when using cert-manager. Does
    # nothing when not using cert-manager.
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  backend:
    # specify the default backend for `ingress-gce` (https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#default_backend)
    serviceName: deck
    servicePort: 80
  rules:
  - host: prow.<< your-domain.com >>
    http:
      paths:
      - path: /
        backend:
          serviceName: deck
          servicePort: 80
      - path: /hook
        backend:
          serviceName: hook
          servicePort: 8888
  tls:
  - hosts:
    - prow.<< your-domain.com >>
    secretName: prow-ingress-tls
